--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,66 @@
-.App {
+$white: #fff;
+$background-color_1: #0041c2;
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+.container {
+	width: 1100px;
+	margin: 0 auto;
+	padding: 1rem;
+}
+.card {
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+	border-radius: 6px;
+	margin: 0 0 1rem 0;
+	display: flex;
+	flex-direction: column;
+}
+.card__img {
+	width: 100%;
+	height: 15rem;
+	border-radius: 6px 6px 0 0;
+	overflow: hidden;
+	img {
+		width: 100%;
+		height: 100%;
+		object-fit: cover;
+	}
+}
+.cart__content {
+	padding: 1rem;
+	display: flex;
+	flex-direction: column;
+	align-items: flex-start;
+	flex: 1 1 auto;
+	p {
+		flex: 1 1 auto;
+	}
+	a {
+		display: inline-block;
+		background-color: $background-color_1;
+		color: $white;
+		text-decoration: none;
+		padding: 0.5rem 1rem;
+		border-radius: 50px;
+		margin: 1rem 0 0 0;
+	}
+}
+@media screen and (min-width: 991px) {
+	.cards {
+		display: flex;
+		flex-direction: row;
+		.card {
+			flex: 1;
+			margin: 1%;
+		}
+	}
+}
+
+
+/* .App {
   text-align: center;
 }
 
@@ -35,4 +97,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
